--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,41 @@
+# Virtual environment
 env/
+venv/
+ENV/
+.venv/
+
+# VS Code settings
+.vscode/
+
+# Python cache
 __pycache__/
-*.pyc
-*.db
+*.py[cod]
+*$py.class
+
+# MacOS/Linux/Windows system files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Output folders
 output/
+*.wav.txt
+*.wav
+
+# Environment variable files
+.env
+.env.*
+
+# Jupyter notebooks checkpoints (if any)
+.ipynb_checkpoints/
+
+# Build artifacts
+build/
+dist/
+*.egg-info/
+
+# IDE configs
+.idea/
+*.iml
